# Thirstys-Builder

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
benchmarks/: benchmark_kernel.py  benchmark_suite.py
ci/: README.md  github-actions.yml
commander/: audit-log.md  final-certification-report.md
deploy/: Dockerfile  README.md  docker-compose.yml  example-config.json  kubernetes.yaml
docs/: FEDERATION.md  architecture.md
examples/: README.md  conformance-suite.json  policy-bundle.json
formal/: authorization_invariant.cfg  authorization_invariant.tla  kernel_authorization_model.json  policy_authorization.als  proof-obligations.md
release/: package-manifest.json  package-signature.json  provenance.json  provenance.signature.json  sbom.json  signing-public-key.pem
scripts/: build_personal_builder_coder.py  build_release_package.py  fuzz_kernel_authorization.py  generate_release_evidence.py  install_formal_tools.py  model_check_authorization.py  property_fuzz_kernel_authorization.py  release_config.py  run_chaos_checks.py  run_cluster_conformance.py  run_conformance.py  run_grpc_conformance.py  (+9 more)
thirsty-ai-builder/cli/: pyproject.toml
thirsty-ai-builder/cli/starter_skills/code-review/: SKILL.md
thirsty-ai-builder/cli/starter_skills/refactor-planner/: SKILL.md
thirsty-ai-builder/cli/starter_skills/release-runbook/: SKILL.md
thirsty-ai-builder/cli/thirsty_ai_builder_cli/: __init__.py  __main__.py  client.py  config.py  confirm.py  session.py  skills.py
thirsty-ai-builder/rust-auditor/: Cargo.toml
thirsty-ai-builder/rust-auditor/.github/workflows/: commander-audit.yml
thirsty-ai-builder/rust-auditor/src/: main.rs
thirsty-ai-builder/rust-auditor/tests/: cli_smoke.rs
(+142 files in other folders)
