[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-builder"
version = "0.1.0"
description = "Deterministic governed execution kernel reference implementation."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.7,<50",
  "grpcio>=1.81.1,<2",
  "protobuf>=6.33.5,<7"
]

[project.scripts]
constitutional-builder = "constitutional_builder.cli:main"
constitutional-builder-api = "constitutional_builder.api:main"
constitutional-builder-grpc = "constitutional_builder.grpc_server:main"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
