[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thirsty"
version = "0.3.1"
description = "Local coding agent CLI for the ThirstyAI Builder."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
thirsty = "thirsty_ai_builder_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thirsty_ai_builder_cli*"]
