[package]
name = "commander-auditor"
version = "0.1.0"
edition = "2021"
description = "CI auditor that posts PR metadata to a ThirstyAi Builder Commander backend"
license = "Proprietary"
publish = false

[[bin]]
name = "commander-auditor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
